tests/tests/errors/2006-15.vb
'#compiler-options:/libpath:
'#compiler-message:Command line error BC2006 : option 'libpath' requires ':<path_list>'
'#exit-code:1